fix for scrollbar being offscreen.

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -38,14 +38,15 @@
 		top: 0;
 	}
 	.main-settings-view, .main-view{
-		padding-top: @filter-height + 30px;
 		.pos-rel();
 		height: 100%;
+		padding: 10px;
+		padding-top: @filter-height + 25px;
 		> .settings-panel, .main-panel{
 			position: relative;
 			height: 100%;
 			overflow: auto;
-			padding-bottom: @filter-height + 30px 0;
+			padding-bottom: @filter-height + 25px;
 		}
 	}
 }
